SUBDIRS = src apps include test

if GDAL_IS_CONFIG
GDAL_CPPFLAGS = @GDAL_INC@ -DHAVE_GDAL=1
endif

if GEOTIFF_IS_CONFIG
GEOTIFF_CPPFLAGS = @GEOTIFF_INC@ -DHAVE_LIBGEOTIFF=1
endif

if SPATIALINDEX_IS_CONFIG
SPATIALINDEX_CPPFLAGS = @SPATIALINDEX_INC@/spatialindex @SPATIALINDEX_INC@ -DHAVE_SPATIALINDEX=1
endif

if OCI_IS_CONFIG
OCI_CPPFLAGS = @ORACLE_OCI_CFLAGS@ -DHAVE_ORACLE=1
endif

if ZLIB_IS_CONFIG
ZLIB_CPPFLAGS = @ZLIB_INC@ -DHAVE_ZLIB=1
endif

if BOOST_IS_CONFIG
BOOST_FLAGS = @BOOST_CPPFLAGS@ -DHAVE_BOOST=1
endif

AM_CPPFLAGS = -I../include/liblas/capi -I../include $(GEOTIFF_CPPFLAGS) $(GDAL_CPPFLAGS) $(SPATIALINDEX_CPPFLAGS) $(OCI_CPPFLAGS) $(ZLIB_CPPFLAGS) $(BOOST_FLAGS)

EXTRA_DIST = \
            nmake.opt \
            makefile.vc \
            src/makefile.vc \
            src/Version.rc
